Fix sized box component X overflow

--- a/client/src/App/styles/components/_sized_box.scss
+++ b/client/src/App/styles/components/_sized_box.scss
@@ -1,9 +1,9 @@
 .sized_box {
-  margin: 40px;
+  margin: 40px 0;
   padding: 0;
   min-height: 20px;
 
   @include large-phones {
-    margin: 10px;
+    margin: 10px 0;
   }
 }
